Fix flex-wrap issue and comment out font-awesome link

--- a/assets/css/film-detail.css
+++ b/assets/css/film-detail.css
@@ -11,6 +11,7 @@
     gap: 10px;
     align-items: center;
     margin-bottom: 40px;
+    flex-wrap: wrap;
 }
 .breadcrumb a {
     color: #fff;
@@ -66,6 +67,11 @@
         padding: 90px 100px;
         padding-top: 120px;
     }
+
+    /* .breadcrumb {
+        flex-direction: column;
+    } */
+
     .film-detail {
         display: block;
     }
